<resources>
    <string name="app_name">Limitatore</string>
    <string name="sign_in">Sign in</string>
    <string name="gunakanlah_waktu_anda_sebaik_mungkin">Gunakanlah waktu anda sebaik mungkin</string>
    <string name="let_s_sign_you_in">Let you sign in</string>
    <string name="silahkan_sign_in_terlebih_dahulu_sebelum_memasuki_aplikasi">Silahkan Sign In terlebih dahulu sebelum memasuki aplikasi</string>
    <string name="Email1">Email@email.com</string>
    <string name="password">********</string>
    <string name="lupa_password">lupa password?</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="register">Register</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name = "pause">pause</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="Password1">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="email_validation_has_been_sent">Email Validation has been sent</string>
    <string name="back_to_sign_in">Back To Sign In</string>
    <string name="masukan_jam">masukan jam</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>

</resources>