<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4FF"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4.13:0.68"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/homeinselect2" />

        <ImageButton
            android:id="@+id/btnTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="7dp"
            android:background="#00000000"
            app:srcCompat="@drawable/timeselect" />

        <ImageButton
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="7dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/profileunselect" />

    </FrameLayout>

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/start"
        app:layout_constraintDimensionRatio="3.2:0.65"
        app:backgroundTint="#6767D0"
        app:layout_constraintEnd_toEndOf="@id/guideline11"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="260dp"
        android:layout_toEndOf="@+id/button_start_pause"
        android:layout_toRightOf="@+id/button_start_pause"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio="3.2:0.65"
        app:backgroundTint="#6767D0"
        app:layout_constraintEnd_toEndOf="@id/guideline11"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/submission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/masukan_jam"
        android:inputType="number"
        android:padding="8dp"
        android:textColorHint="#6767D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"

        android:text="@string/submit"
        android:visibility="invisible"
        app:backgroundTint="#6767D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        app:layout_constraintDimensionRatio="3.2:1.6"
        app:layout_constraintEnd_toEndOf="@id/guideline11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:text="00:00:00"
            android:textColor="#151B5D"
            android:textSize="60sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="LIMITER"
        android:textColor="#151B5D"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>